done with the nav bar , there is still some bug regarding the alignment of the nav bar

--- a/Assignment 3/part3/style.css
+++ b/Assignment 3/part3/style.css
@@ -132,4 +132,19 @@ nav li{
 }
 nav li a {
   text-decoration: none;
+  display: inline-block;
+  width: 100%;
+  line-height: 3;
+  text-align: center;
+  font-size: 2.5rem;
+  border: 1px solid #a66
+}
+
+nav li a:focus , nav li a:hover{
+  color: white;
+  background:#a66 ;
+}
+nav li a:active{
+  color: white;
+  background: black;
 }
